heeder gap fix

--- a/styles/header.css
+++ b/styles/header.css
@@ -4,7 +4,7 @@
 
 .header .container {
   height: 36px;
-  margin-bottom: 252px;
+  margin-bottom: 182px;
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
