--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -16,7 +16,7 @@
   .header .container {
     width: 364px;
     height: 36px;
-    margin-bottom: 74px;
+    margin-bottom: 42px;
   }
 
   .headerNav {
